# CLUBConcours

./: .gitignore  CLUBConcou12.db  README.md  pyproject.toml
src/clubconcours.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/clubconcours/app/: dev_demo.py  inspect_round.py  main.py  theme.qss  ui_boot.py  ui_concours.py  ui_draw.py  ui_export.py  ui_home.py  ui_main.py  ui_players.py  ui_ranking.py  ui_round_tab.py  ui_scores.py
src/clubconcours/core/: draw.py  ranking.py
src/clubconcours/storage/: db.py  repositories.py  schema.sql
