[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clubconcours"
version = "0.1.0"
description = "Gestion de concours (v2) - PySide6 + SQLite"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.6",
  "openpyxl>=3.1",
  "reportlab>=4.0",
]

[project.scripts]
clubconcours = "clubconcours.app.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
